--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="57">
     <nav class="navbar navbar-dark navbar-expand-md fixed-top bg-dark shadow" id="top" style="--bs-body-bg: #fff;">
-        <div class="container"><img class="img-fluid m-3" src="assets/img/mylogo.png" width="70px" style="border-radius: 50px;"><a class="navbar-brand" href="#" style="--bs-body-color: var(--bs-success);">Primetech Solutions</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><img class="img-fluid m-3" src="assets/img/mylogo.png" width="70px" style="border-radius: 50px;"><a class="navbar-brand" href="#" style="--bs-body-color: var(--bs-success);">Primetec Solutions</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto" style="display: flex;">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
@@ -164,7 +164,7 @@
                             </svg></div>
                         <div>
                             <h4 style="font-family: 'Abhaya Libre', serif;">Adokwu Michael Adiga</h4>
-                            <p>Web designer</p>
+                            <p>Web developer</p>
                         </div>
                     </div>
                     <div class="text-center text-md-start d-flex flex-column align-items-center align-items-md-start mb-5">
